--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # Godot 4+ specific ignores
 .godot/
+
+test.py
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+# C extensions
+*.so
